RESOLVED FIXED287229
[visionOS] Playing 360 or 180 videos displays an empty screen
https://bugs.webkit.org/show_bug.cgi?id=287229
Summary [visionOS] Playing 360 or 180 videos displays an empty screen
Jean-Yves Avenard [:jya]
Reported 2025-02-07 01:17:49 PST
STR: Play a 360 or 180 degrees immersive videos. All you get is a black screen.
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-02-07 01:17:57 PST
Jean-Yves Avenard [:jya]
Comment 2 2025-02-07 02:08:37 PST
EWS
Comment 3 2025-02-07 23:55:51 PST
Committed 290083@main (2e2d6888bb59): <https://commits.webkit.org/290083@main> Reviewed commits have been landed. Closing PR #40202 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.