Source/WebCore/platform/graphics/cocoa/NullVideoPresentationInterface.h
@@ -55,6 +55,7 @@ public:
     PlaybackSessionModel* playbackSessionModel() const { return m_playbackSessionInterface->playbackSessionModel(); }
 
     void setSpatialVideoMetadata(const std::optional<SpatialVideoMetadata>&) { }
+    void setIsImmersiveVideo(bool) { }
     void setVideoPresentationModel(VideoPresentationModel* model) { m_videoPresentationModel = model; }
     void setupFullscreen(const FloatRect&, const FloatSize&, UIView*, HTMLMediaElementEnums::VideoFullscreenMode, bool, bool, bool) { }
     void enterFullscreen() { }
